# tauri-plugin-iap

./: .editorconfig  AGENTS.md  Procfile.android  Procfile.ios  README.md  build.rs  eslint.config.ts  index.html  keepWarm.js  mise.toml  package-lock.json  package.json  prettier.config.ts  stylelint.config.js  tsconfig.json  vite.config.ts
android/: build.gradle.kts
guest-js/: index.ts
ios/Sources/: IapPlugin.swift
lib/tauri-plugin-iap/: build.rs  package.json  prettier.config.ts
lib/tauri-plugin-iap/android/: build.gradle.kts  settings.gradle
llm/: Dockerfile  cloudbuild.yaml
mobile/: Procfile.android  package.json  tsconfig.node.json
mobile/src/: Doc.module.css  Page.tsx  Search.module.css  Search.tsx  Subscribe.tsx  useStore.ts
mobile/src-tauri/: Cargo.toml
mobile/src/ocr/: index.ts  (+1 more)
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: App.css  App.tsx  Camera.module.css  Camera.tsx  CameraView.tsx  Debug.tsx  Doc.module.css  Doc.tsx  List.module.css  List.tsx  Page.module.css  Page.tsx  Search.module.css  Search.tsx  Subscribe.tsx  commands.rs  global.css  lib.rs  localStore.ts  main.tsx  mobile.rs  models.rs  useScrollRestore.ts  useStore.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Camera.tsx  DocDrawer.module.css  DocDrawer.tsx  Loader.module.css
src/ocr/: index.ts  mock.ts  remote.ts
src/store/: dbHelpers.ts  localStore.ts  sqliteStore.ts  types.ts
(+34 files in other folders)
